tests/fixtures/invalid/none_mod_float.py
# Cannot modulo None and Float
x: float = None % 1.0
